# Personal-Controller

./: .dockerignore  .env.example  .gitignore  ACHIEVEMENTS.md  API_DOCUMENTATION.md  ARCHITECTURE.md  AVILADB_INTEGRATION.md  Cargo.toml  DATA_ANALYSIS_GUIDE.md  DATA_EXTRACTION_SUMMARY.md  DEPLOYMENT.md  LICENSE  PROJECT_STATUS.md  QUICKSTART.md  README.md  RESUMO_EXECUTIVO.md  STATUS_REPORT.md  TESTING.md  docker-compose.yml  index.html  start.ps1  start.sh
.github/workflows/: ci.yml
examples/: advanced_bulk_import.rs  api_client.rs  complete_import.rs
pc-api/: Cargo.toml  Dockerfile
pc-api/src/: error.rs  handlers.rs  main.rs  middleware.rs
pc-cli/: Cargo.toml
pc-cli/src/: main.rs
pc-core/: Cargo.toml
pc-core/src/: lib.rs
pc-db/: Cargo.toml
pc-db/src/: aviladb_mock.rs  client.rs  lib.rs  repository.rs
pc-importers/: Cargo.toml
pc-importers/src/: excel_importer.rs  freight_importer.rs  lib.rs  pdf_importer.rs  photo_importer.rs  route_importer.rs  timesheet_importer.rs
pc-llm/: Cargo.toml
pc-llm/examples/: basic_chat.rs  embeddings.rs  rag_example.rs
pc-llm/src/: chat.rs  embeddings.rs  lib.rs  rag.rs
pc-llm/tests/: integration_test.rs
pc-models/: Cargo.toml
pc-models/src/: company.rs  contact.rs  fiscal.rs  freight.rs  lib.rs  route.rs  timesheet.rs  validation.rs
pc-web/: Dockerfile  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
pc-web/src/app/: error.tsx  layout.tsx  loading.tsx  page.tsx  page.tsx.backup
pc-web/src/app/chat/: page.tsx
pc-web/src/components/: ErrorBoundary.tsx
pc-web/src/components/dashboard/: FreightChart.tsx  RecentActivity.tsx  StatCard.tsx
pc-web/src/components/layout/: Sidebar.tsx
pc-web/src/components/providers/: QueryProvider.tsx
pc-web/src/lib/: api.ts
scripts/: advanced_import_all.ps1  analyze_freight_data.ps1  chat.ps1  clean_imported_data.ps1  direct_csv_import.ps1  import-all-data.ps1  import_all.ps1  import_csv_clean.ps1  import_fixed.ps1  import_simple.ps1  quick_extract.ps1  start-server.ps1
src/: main.rs
