[package]
name = "pc-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Personal Controller CLI"

[[bin]]
name = "pc"
path = "src/main.rs"

[dependencies]
pc-core = { path = "../pc-core" }
pc-models = { path = "../pc-models" }
pc-db = { path = "../pc-db" }
pc-importers = { path = "../pc-importers" }
pc-llm = { path = "../pc-llm" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
