[package]
name = "pc-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Personal Controller - Core types and traits"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
