[package]
name = "pc-models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Personal Controller - Data models"

[dependencies]
pc-core = { path = "../pc-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
